--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{{ title }}</title>
+    <title>Remarkable - {{ title }}</title>
     <link rel="stylesheet" href="/theme/{{ theme }}/main.css">
   </head>
-  <body>{{ body|safe }}</body>
+  <body>
+    {% block content %}{% endblock %}
+  </body>
 </html>
